# ai-suite

./: README.md  app.py  no-flask.py  pyproject.toml
templates/: index.html
